fixed mistake in short version rule for FLEX

--- a/AcSS/grid.css
+++ b/AcSS/grid.css
@@ -125,7 +125,7 @@ transform: translate(-50%);
 }
 /****************************************************************CELL SIZE END*/
 /*******************************************************************GRID START*/
-.FLEX, .FT{
+.FLEX, .F{
   display: flex;
   width: 100%;
 
