--- a/css/example.css
+++ b/css/example.css
@@ -11,36 +11,23 @@ main
 
 article
 {
-    border: 3px solid #000000;
     width: 100%;
-    margin-bottom: 20px;
     box-sizing: border-box;
-}
-
-article:last-child
-{
-    margin-bottom: 0;
 }
 
 section
 {
-    border: 2px solid #3F3F3F;
+    border-color: #3F3F3F;
     width: 100%;
-    margin-bottom: 10px;
     box-sizing: border-box;
     background-color: #00BFBF;
     position: relative;
 }
 
-section:last-child
-{
-    margin-bottom: 0;
-}
-
 aside
 {
     width: 20%;
-    border: 2px solid #7F7F7F;
+    border-color: #7F7F7F;
     box-sizing: border-box;
     background-color: #007F7F;
 }
