--- a/AcSS/grid.css
+++ b/AcSS/grid.css
@@ -8,25 +8,25 @@
 .left {
     left: 0%;
     top: 50%;
-        transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .right {
     right: 0%;
     top: 50%;
-        transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .top {
     left: 50%;
     top: 0%;
-transform: translate(-50%);
+    transform: translate(-50%);
 }
 
 .bottom {
     bottom: 0%;
     left: 50%;
-        transform: translate(-50%);
+    transform: translate(-50%);
 }
 
 .middle {
@@ -34,6 +34,7 @@ transform: translate(-50%);
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .topleft {
     top: 0%;
     left: 0%;
@@ -133,17 +134,22 @@ transform: translate(-50%);
 
 /******************************CELL SIZE END******************************/
 
-/*********************************************************************************/
-.FLEX{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
 
+/*********************************************************************************/
+
+.FLEX {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
-.FLEX >* {
+
+.FLEX>* {
     flex: 1;
 }
+
+
 /******************************************************************************/
+
 
 /******************************MAX SIZE OF PARENT START******************************/
 
@@ -187,6 +193,43 @@ transform: translate(-50%);
     max-width: 100%;
 }
 
+.MAXCONTENTHEIGHT01 {
+    max-height: 10%;
+}
+
+.MAXCONTENTHEIGHT02 {
+    max-height: 20%;
+}
+
+.MAXCONTENTHEIGHT03 {
+    max-height: 30%;
+}
+
+.MAXCONTENTHEIGHT04 {
+    max-height: 40%;
+}
+
+.MAXCONTENTHEIGHT05 {
+    max-height: 50%;
+}
+
+.MAXCONTENTHEIGHT06 {
+    max-height: 60%;
+}
+
+.MAXCONTENTHEIGHT07 {
+    max-height: 70%;
+}
+
+.MAXCONTENTHEIGHT08 {
+    max-height: 80%;
+}
+.MAXCONTENTHEIGHT09 {
+    max-height: 90%;
+}
+.MAXCONTENTHEIGHT1 {
+    max-height: 100%;
+}
 /*******************************MAX SIZE OF PARENT END******************************************/
 
 .RESIZEFROMUSER {
@@ -199,6 +242,7 @@ transform: translate(-50%);
     position: relative;
     border: 1px solid blue;
 }
+
 .TABLETITLE {
     border: 1px solid black;
     background-color: rgba(42, 12, 237, 0.9);
