ajout d'une explication sur la fonction FLEXTABLE

--- a/AcSS/grid.css
+++ b/AcSS/grid.css
@@ -137,13 +137,13 @@
 
 /*********************************************************************************/
 
-.FLEX {
+.FLEXTABLE {
     display: flex;
     flex-direction: row;
     width: 100%;
 }
 
-.FLEX>* {
+.FLEXTABLE>* {
     flex: 1;
 }
 
